--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,7 @@
 ## Set up Replicate: https://replicate.com
-REPLICATE_API_KEY=
+REPLICATE_API_KEY=111
+Client_ID=5b583e29902046249c2ac9c2d1480997
+SERVER_ADDRESS=192.168.31.145:8188
 
 ## Set up Vercel Blob: https://vercel.com/docs/storage/vercel-blob/quickstart
 BLOB_READ_WRITE_TOKEN=
