--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@comfyorg/litegraph": "^0.7.80",
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,17 +23,21 @@
     "@vercel/blob": "^0.12.4",
     "@vercel/kv": "^0.2.2",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.279.0",
     "nanoid": "^5.0.1",
     "next": "^13.5.2",
     "next-plausible": "^3.11.3",
     "postcss": "8.4.29",
     "prettier": "^3.0.3",
+    "primevue": "^4.0.7",
     "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "replicate": "^0.18.0",
@@ -41,7 +46,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "ws": "^8.18.0",
-    "zod": "^3.22.2"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
